# redisjson-py

./: .gitignore  .travis.yml  API.md  CHANGELOG.md  Makefile  README.md  README.rst  build.py  gendoc.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: codeql-analysis.yml
docs/: conf.py  examples.rst  index.rst  introduction.rst
rejson/: __init__.py  client.py  path.py
test/: test.py
tests/: test_rejson.py
